--- a/04-analysis_covariates.Rmd
+++ b/04-analysis_covariates.Rmd
@@ -441,7 +441,7 @@ time_range <- as.Date(c("2019-03-01", "2019-07-01")) # a time range of interest
 
 ```
 
-```{r ch4_47b, class.source="Rmain", message=F, warning=F, echo=F}
+```{r ch4_47b, class.source="Rmain", message=F, warning=F, echo=F, eval=F}
 ## Get the URLs of the data
 urls <- mf_get_url(
   collection = collection,
@@ -469,6 +469,38 @@ tmp <- terra::extract(r, locs_terra, fun=mean, ID=F) # Extract - each layer will
 locs_sf$mean_ndvi <- rowMeans(tmp) # take the mean of each column
 
 ```
+
+```{r ch4_47c, message=F, warning=F, echo=F, include=F}
+## Get the URLs of the data
+urls <- mf_get_url(
+  collection = collection,
+  variables = variables,
+  roi = aoi_sf,
+  time_range = time_range
+)
+
+## Download the data. By default the data is downloaded in a temporary directory, but you can specify a folder
+res_dl <- mf_download_data(urls, parallel = TRUE)
+
+# Import it into R
+r <- mf_import_data(
+  path = dirname(res_dl$destfile[1]),
+  collection = collection,
+  proj_epsg = 26912
+)
+
+# Plot the resulting NDVI data
+terra::plot(r, col = rev(terrain.colors(20)), 
+            range=c(0,1)) # Specify the range of values you want to plot
+
+# Extract the data to camera locations
+tmp <- terra::extract(r, locs_terra, fun=mean, ID=F) # Extract - each layer will become its own column
+locs_sf$mean_ndvi <- rowMeans(tmp) # take the mean of each column
+
+```
+
+
+
 
 Easy!
 
